Bug 525413 - lirasm: avoid operandCount, r=graydon.